fix: Исправление работы методов создания талонов.